added images and links to lasagna page

--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -6,9 +6,9 @@
     <title>Cupcakes</title>
 </head>
 <body>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href = "recipes/banana smoothie.html">Banana Smoothie</a>
-    <a href="recipes/cupcakes.html">Cup Cakes</a>
+    <a href="lasagna.html">Lasagna</a>
+    <a href = "banana smoothie.html">Banana Smoothie</a>
+    <a href="cupcakes.html">Cup Cakes</a>
     <h1>How to make a Cupcake</h1>
     <img src="images/cupcake-vintage-style_1020-546.webp" alt="cup-cake">
     <p>The right amount of sugar with for the kids.Easy to make and 
