--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="images/" alt="Lasagna" width="700">
+    <img src="images/Classic-Lasagna-14-scaled.jpg" alt="Lasagna" width="700">
     <h2>Grandma's hidden lasagna recipe</h2>
     
     <p>The perfect lasagna recipe made with parmesan ricotta<br> cheese filling, melted mozzarella cheese, lasagna noodles, 
